--- a/resources/css/style_index.css
+++ b/resources/css/style_index.css
@@ -313,7 +313,7 @@ header{
     }
 
     .contact-section {
-        background-color: #22262A;
+        background-color: #31363b;
         color: #fff;
     }
 
