--- a/resources/css/show.css
+++ b/resources/css/show.css
@@ -90,6 +90,25 @@
     text-align: right;
 }
 
+.btn {
+    background-color: #007BFF; /* Color de fondo */
+    color: #FFFFFF; /* Color del texto */
+    border: none; /* Sin bordes */
+    padding: 10px 20px; /* Espaciado interno */
+    text-align: center; /* Alineación del texto */
+    text-decoration: none; /* Sin subrayado */
+    display: inline-block; /* Para que se comporte como un bloque en línea */
+    font-size: 16px; /* Tamaño del texto */
+    margin: 4px 2px; /* Margen alrededor del botón */
+    cursor: pointer; /* Cambia el cursor a una mano cuando se pasa por encima */
+    border-radius: 4px; /* Bordes redondeados */
+    transition: background-color 0.3s; /* Transición suave del color de fondo */
+}
+
+.btn:hover {
+    background-color: #0056b3; /* Cambia el color de fondo cuando se pasa el ratón por encima */
+}
+
 @media (prefers-color-scheme: dark) {
 
     .comic-content {
