--- a/resources/css/style_index.css
+++ b/resources/css/style_index.css
@@ -4,6 +4,11 @@ body {
     padding: 0;
 }
 
+main{
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
 .container {
     margin: 0 auto;
     padding: 20px;
@@ -329,5 +334,68 @@ header{
     footer {
         background-color: #22262A;
         color: #fff;
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    .container {
+        padding: 10px;
+    }
+
+    .hero, .search-section, .register-section {
+        flex-direction: column;
+        gap: 30px;
+        margin-right: 20px;
+        margin-left: 20px;
+    }
+
+    .title {
+        font-size: 30px;
+    }
+
+    .hero h2, .search-section h2, .register-section h2 {
+        font-size: 24px;
+    }
+
+    .hero p, .search-section p, .register-section p {
+        font-size: 16px;
+    }
+
+    .section__search, .section__register, .section__link {
+        padding: 10px;
+        font-size: 14px;
+    }
+
+    .footer_c, .footer_l {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .imgs {
+        width: 100%;
+        padding-left: 0;
+    }
+
+    .imagenes {
+        width: 100%;
+    }
+    header {
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
+
+    .imgs {
+        justify-content: center;
+    }
+
+    .links {
+        justify-content: center;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .login {
+        flex-direction: column;
+        gap: 10px;
     }
 }
