--- a/resources/css/style_index.css
+++ b/resources/css/style_index.css
@@ -2,11 +2,13 @@ body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
+    
 }
 
 main{
     max-width: 1200px;
     margin: 0 auto;
+    background-color: #fff;
 }
 
 .container {
@@ -279,9 +281,22 @@ header{
 }
 
 @media (prefers-color-scheme: dark) {
+
     body {
         background-color: #343a40;
         color: #fff;
+    }
+
+    div.relative{
+        background-color: #343a40;
+        color: #fff;
+    }
+
+    main{
+        
+        background-color: #343a40;
+        color: #fff;
+        
     }
 
     header {
@@ -337,7 +352,7 @@ header{
     }
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 767px) {
     .container {
         padding: 10px;
     }
@@ -379,23 +394,26 @@ header{
     .imagenes {
         width: 100%;
     }
-    header {
-        grid-template-columns: 1fr;
-        text-align: center;
-    }
 
     .imgs {
         justify-content: center;
     }
+}
 
-    .links {
-        justify-content: center;
+@media (max-width: 834px) {
+    .hero, .search-section, .register-section {
         flex-direction: column;
-        gap: 10px;
+        gap: 30px;
+        margin-right: 20px;
+        margin-left: 20px;
     }
+    .imagenes {
+        width: 68%;
+    }
+}
 
-    .login {
-        flex-direction: column;
-        gap: 10px;
+@media (max-width: 360px) {
+    .imagenes {
+        width: 88%;
     }
 }
